--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="baseModels" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\baseModels.zip;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="OdysseyDB" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\OdysseyDB.json;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
 </root>
